--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:backgroundTint="#9C27B0"
+        android:backgroundTint="#8027B0"
         android:text="@string/button_convert_text"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
